--- a/src/app/reg-admin/voter-management/voter-management.component.scss
+++ b/src/app/reg-admin/voter-management/voter-management.component.scss
@@ -14,8 +14,8 @@ $h1: 2rem;
             background-color: #fff;
             box-shadow: 4px 0 4px rgba(0,0,0,.1);
             padding: 20px;
-            width: 65%;
-            height: 381px;
+            width: 80%;   /* for laptop, desktop: 65% & 381px */
+            height: 500px;
 
             .title {
                 margin-bottom: 0;
