--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -3,6 +3,7 @@
     font-family: 'Lobster', cursive;
     font-size: 32px;
     padding-left: 10px;
+    cursor: default;
 }
 .custom-nav {
     background-color: $secondary-color;
