add token to http option in angular

--- a/src/app/public/login/login.component.scss
+++ b/src/app/public/login/login.component.scss
@@ -37,6 +37,7 @@
         /* border-radius: 25px; */
         margin-top: 40px;
         color: $text-on-secondary;
+        background-color: $secondary-color;
     }
 
 }
