--- a/src/app/home/voting/voting.component.scss
+++ b/src/app/home/voting/voting.component.scss
@@ -22,9 +22,13 @@
         border-radius: 4px;
         box-shadow: 0 2px 2px rgba(10, 16, 20, .24), 0 0 2px rgba(10, 16, 20, .12);
         box-sizing: border-box;
-        transition: box-shadow .5s;
+        transition: box-shadow .3s;
         max-width: 340px;
         min-width: 262px;
+
+        &:hover {
+            box-shadow: 0 5px 15px rgba(7, 65, 173, .4);
+        }
 
         .candidate {
             width: 100%;
@@ -76,15 +80,6 @@
                 }
             }
 
-        }
-
-        &:hover .overlay {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            opacity: 0.9;
-            box-shadow: 0 8px 8px rgba(10,16,20,.24), 0 0 8px rgba(10,16,20,.12);
-            text-decoration: none;
         }
 
         .active {
