angular guards quite done

--- a/src/app/shared/nav/navbar.component.html
+++ b/src/app/shared/nav/navbar.component.html
@@ -13,6 +13,11 @@
                 {{routesItem.title}}
             </a>
         </li>
+        <li routerLinkActive="active" class="menu-item">
+            <a class="item-text" (click)="onLogout()">
+                Sign out
+            </a>
+        </li>
     </ul>
 
 </nav>
