--- a/src/app/shared/not-found/not-found.component.html
+++ b/src/app/shared/not-found/not-found.component.html
@@ -1,25 +1,13 @@
-<div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div class="error-template">
-                <h1>
-                    Oops!</h1>
-                <h2>
-                    404 Not Found</h2>
-                <div class="error-details">
-                    Sorry, an error has occured, Requested page not found!
-                </div>
-                <div class="error-actions">
-                    <button  class="btn btn-primary btn-lg" [routerLink]="['']">
-                        <span class="glyphicon glyphicon-home"></span>
-                        Take Me Home 
-                    </button>
-                    <button class="btn btn-default btn-lg">
-                        <span class="glyphicon glyphicon-envelope"></span> 
-                        Contact Support 
-                    </button>
-                </div>
-            </div>
+<div class="face">
+        <div class="band">
+            <div class="red"></div>
+            <div class="white"></div>
+            <div class="blue"></div>
         </div>
+        <div class="eyes"></div>
+        <div class="dimples"></div>
+        <div class="mouth"></div>
     </div>
-</div>
+    
+    <h1>Oops! The page you looking for does not exist!</h1>
+<div class="back-button" (click)="onGoBack()">Return to Home</div>
