--- a/src/app/ea-admin/finalize-dialog/finalize-dialog.component.html
+++ b/src/app/ea-admin/finalize-dialog/finalize-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-auto col-layout">
+<div class="col-md-auto px-0 col-layout finalize-dialog">
     <div class="toolbar-box">
         <mat-toolbar class="login-toolbar">
             <span id="welcome" class="fill-remaining-space">
@@ -8,13 +8,10 @@
     </div>
     <!--*ngIf="!error && !isSuccess && !isLoading"-->
     <div class="form-gourp" *ngIf="!error && !isSuccess && !isLoading">
-        <div class="user-icon">
-            <i class="fas fa-user-cog"></i>
-        </div>
         <div class="sign-up-text">
             <div>
                 <label class="session-text" >
-                    IMPORTANT: Please finalize your ballot setup first.
+                    <span class="text-danger">IMPORTANT:</span> Please finalize your ballot setup first.
                     Once you hit the finalize button, the ballot setup - {{electionName}} cannot change or edit it anymore.
                 </label>
             </div>
@@ -22,10 +19,10 @@
 
         <!-- Button group -->
         <div class="flex-center">
-            <button (click)="onCancelClicked(false)" class="full-width-input cancel btn btn-primary">
+            <button (click)="onCancelClicked(false)" class="full-width-input cancel-btn btn btn-outline-dark">
                 <span class="text-color-login-form"> Cancel </span>
             </button>
-            <button id="sign-in-btn" (click)="onFinalizeClicked()" class="full-width-input setup btn btn-primary">
+            <button id="sign-in-btn" (click)="onFinalizeClicked()" class="full-width-input finalize-btn btn btn-primary">
                 <span class="text-color-login-form"> Finalize </span>
             </button>
         </div>
@@ -41,7 +38,7 @@
         </div>
 
         <div *ngIf="isSuccess && !isLoading">
-            Successfully set up the {{electionName}}!
+            Successfully start voting phase of the {{electionName}}!
             <button (click)="onCancelClicked(true)" class="full-width-input setup btn btn-primary">
                 <span class="text-color-login-form">Close</span>
             </button>
