improve auth guard

--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -32,7 +32,7 @@
             </div>
             <div class="sign-up-text">
                 <div class="checkbox session keep-signed">
-                    <input class="styled-checkbox" id="styled-checkbox-1" type="checkbox" value="value1">
+                    <input class="styled-checkbox" id="styled-checkbox-1" type="checkbox" formControlName="keepSignIn">
                     <label class="session-text" for="styled-checkbox-1">{{ pageStrings.KEEP_SIGNED_IN_TEXT | uppercase }}</label>
                 </div>
                 <mat-divider class="session-divider" [vertical]="true"></mat-divider>
