--- a/src/app/ea-admin/management/management.component.html
+++ b/src/app/ea-admin/management/management.component.html
@@ -26,7 +26,7 @@
 
         <div class="phase-group-button">
 
-            <button mat-raised-button [disabled]="canDisableButton(phases[0]['key']) || interval"
+            <button mat-raised-button [disabled]="canDisableButton(phases[0]['key']) || phases[0]['isLoading']"
                     (click)="resetTime(phases[0]['key'])">
                 <span class="d-inline-block">{{ phases[0]['label'] }}</span>
                 <span *ngIf="phases[0]['isLoading']" class="d-inline-block" style="margin-left: 5px;">
@@ -34,7 +34,7 @@
             </span>
             </button>
 
-            <button mat-raised-button [disabled]="canDisableButton(phases[1]['key']) || interval"
+            <button mat-raised-button [disabled]="canDisableButton(phases[1]['key']) || phases[1]['isLoading']"
                     (click)="resetTime(phases[1]['key'])">
                 <span class="d-inline-block">{{ phases[1]['label'] }}</span>
                 <span *ngIf="phases[1]['isLoading']" class="d-inline-block" style="margin-left: 5px;">
