--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,8 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light custom-nav fixed-top">
-    <button class="hamburger" (click)="toggleSidebar()" mat-button>
-        <!-- <span class="lnr lnr-menu"></span> -->
+    <!-- <button class="hamburger" (click)="toggleSidebar()" mat-button>
         <i class="material-icons">menu</i>
-    </button>
+    </button> -->
     <a class="navbar-brand text-color">
         <img src="../../../assets/brand/icon_white.png" width="50px" class="d-inline-block align-top" alt="">
         <span class="fancy-font">{{brandName}}</span>
