--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -23,6 +23,9 @@
     color: $text-on-secondary !important;
 }
 
+.navbar-brand {
+    padding-left: 30px;
+}
 .middle-brand-text {
     margin-top: 3px;
 }
