--- a/src/app/home/voting/voting.component.scss
+++ b/src/app/home/voting/voting.component.scss
@@ -5,6 +5,12 @@
     padding-bottom: 20px;
 }
 
+.header {
+    font-size: 1.2rem;
+    font-weight: bold;
+    text-align: center;
+}
+
 .items {
     display: -webkit-box;
     display: flex;
