--- a/src/app/ea-admin/ballot-setup/ballot-setup.component.html
+++ b/src/app/ea-admin/ballot-setup/ballot-setup.component.html
@@ -21,9 +21,9 @@
             </mat-form-field>
 
             <mat-form-field>
-                <input matInput placeholder="Max number of candidates that can be voted" formControlName="maxCandidate">
+                <input matInput placeholder="Max number of candidates that can be voted" formControlName="limitCandidate">
                 <mat-error>
-                    <app-error-field [errorCode]="ballotInfoFormGroup.get('maxCandidate').errors" ></app-error-field>
+                    <app-error-field [errorCode]="ballotInfoFormGroup.get('limitCandidate').errors" ></app-error-field>
                 </mat-error>
             </mat-form-field>
 
@@ -77,7 +77,7 @@
                             <mat-datepicker-toggle matSuffix [for]="endRegPhase"></mat-datepicker-toggle>
                             <mat-datepicker #endRegPhase></mat-datepicker>
                         </mat-form-field>
-                    </div>         
+                    </div>
                 </div>
                 <!-- End of Register phase -->
 
@@ -101,7 +101,7 @@
                 </div>
                 <!-- End of Voting phase -->
             </div>
-            
+
             <div>
                 <button class="step-button-padding" mat-stroked-button matStepperPrevious>Back</button>
                 <button mat-stroked-button color="primary" matStepperNext>Next</button>
