update UI get selected candidates

--- a/src/app/home/voting/voting.component.html
+++ b/src/app/home/voting/voting.component.html
@@ -23,7 +23,7 @@
             <!--A candidate information-->
             <div class="candidate">
                 <div class="image">
-                    <img  src="{{ candidate['picture' ]}}">
+                    <img  src="{{ candidate['avatar']}}">
                 </div>
                 <div class="name">
                     <p>{{ candidate['title'] + '. ' + candidate['firstName'] + ' ' + candidate['lastName'] | titlecase }}</p>
